5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1712_2507.log
== SUBMITION (2019-05-15 12:25:28) 
-- CODE:
Qi = int(input(""))
Pc = float(input(""))
Qv = int(input(""))

Max = 8000
meses = 0

while 0 < Qi <= Max: 
	Qi = Qi + Qi*(Pc/100) - Qv
	meses = meses + 1
if Qi >= Max:
	print("MAXIMO")
elif Qi < 0:
	print("ZERO")
print(meses)
-- EXECUTION TIME:
0.161855
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
6
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
ZERO
5
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:26:49) 
-- CODE:
Qi = int(input(""))
Pc = float(input(""))
Qv = int(input(""))

Max = 8000
meses = 0

while 0 < Qi <= Max: 
	Qi = Qi + Qi*(Pc/100) - Qv
	meses = meses + 1
if Qi >= Max:
	print("MAXIMO")
elif Qi < 0:
	print("ZERO")
print(meses)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:27:41) 
-- CODE:
Qi = int(input(""))
Pc = float(input(""))
Qv = int(input(""))

Max = 8000
meses = 0

while 0 < Qi <= Max: 
	Qi = Qi + Qi*(Pc/100) - Qv
	meses = meses + 1
if Qi >= Max:
	print("MAXIMO")
elif Qi < 0:
	print("ZERO")
print(meses)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:51:46) 
-- CODE:
Qi = int(input(""))
Pc = float(input(""))
Qv = int(input(""))

Max = 8000
meses = 0

while 0 < Qi <= Max: 
	Qi = Qi + Qi*(Pc/100) - Qv
	meses = meses + 1
	Qv = int(input(""))
if Qi >= Max:
	print("MAXIMO")
elif Qi < 0:
	print("ZERO")
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Qv = int(input(""))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 12:52:24) 
-- CODE:
Qi = int(input(""))
Pc = float(input(""))
Qv = int(input(""))

Max = 8000
meses = 0

while 0 < Qi <= Max: 
	Qi = Qi + Qi*(Pc/100) - Qv
	meses = meses + 1
	Qv = int(input(""))
if Qi >= Max:
	print("MAXIMO")
elif Qi < 0:
	print("ZERO")
print(meses)
-- EXECUTION TIME:
0.205555
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 11, in <module>
    Qv = int(input(""))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:52:43) 
-- CODE:
Qi = int(input(""))
Pc = float(input(""))
Qv = int(input(""))

Max = 8000
meses = 0

while 0 < Qi <= Max: 
	Qi = Qi + Qi*(Pc/100) - Qv
	meses = meses + 1
	Qv = int(input(""))
if Qi >= Max:
	print("MAXIMO")
elif Qi < 0:
	print("ZERO")
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Qv = int(input(""))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:52:57) 
-- CODE:
Qi = int(input(""))
Pc = float(input(""))
Qv = int(input(""))

Max = 8000
meses = 0

while 0 < Qi <= Max: 
	Qi = Qi + Qi*(Pc/100) - Qv
	meses = meses + 1
	Qv = int(input(""))
if Qi >= Max:
	print("MAXIMO")
elif Qi < 0:
	print("ZERO")
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Qv = int(input(""))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 12:53:15) 
-- CODE:
Qi = int(input(""))
Pc = float(input(""))
Qv = int(input(""))

Max = 8000
meses = 0

while 0 < Qi <= Max: 
	Qi = Qi + Qi*(Pc/100) - Qv
	meses = meses + 1
	Qv = int(input(""))
if Qi >= Max:
	print("MAXIMO")
elif Qi < 0:
	print("ZERO")
print(meses)
-- EXECUTION TIME:
0.143243
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 11, in <module>
    Qv = int(input(""))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:57:21) 
-- CODE:
Qi = int(input(""))
Pc = float(input(""))

Max = 8000
meses = 0

while 0 < Qi <= Max: 
	Qi = Qi + Qi*(Pc/100) - Qv
	meses = meses + 1
	Qv = int(input(""))
if Qi >= Max:
	print("MAXIMO")
elif Qi < 0:
	print("ZERO")
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    Qi = Qi + Qi*(Pc/100) - Qv
NameError: name 'Qv' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:57:23) 
-- CODE:
Qi = int(input(""))
Pc = float(input(""))

Max = 8000
meses = 0

while 0 < Qi <= Max: 
	Qi = Qi + Qi*(Pc/100) - Qv
	meses = meses + 1
	Qv = int(input(""))
if Qi >= Max:
	print("MAXIMO")
elif Qi < 0:
	print("ZERO")
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    Qi = Qi + Qi*(Pc/100) - Qv
NameError: name 'Qv' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:58:29) 
-- CODE:
Qi = int(input(""))
Pc = float(input(""))
Qv = int(input(""))

Max = 8000
meses = 0

while 0 < Qi <= Max: 
	Qi = Qi + Qi*(Pc/100) - Qv
	meses = meses + 1
	Qv = int(input(""))
if Qi >= Max:
	print("MAXIMO")
elif Qi < 0:
	print("ZERO")
print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    Qv = int(input(""))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 12:59:18) 
-- CODE:
Qi = int(input(""))
Pc = float(input(""))
Qv = int(input(""))

Max = 8000
meses = 0

while 0 < Qi <= Max: 
	Qi = Qi + Qi*(Pc/100) - Qv
	meses = meses + 1
	Qv = int(input(""))
if Qi >= Max:
	print("MAXIMO")
elif Qi < 0:
	print("ZERO")
print(meses)
-- EXECUTION TIME:
0.161787
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2507/main.py", line 11, in <module>
    Qv = int(input(""))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:59:28) 
-- CODE:
Qi = int(input(""))
Pc = float(input(""))
Qv = int(input(""))

Max = 8000
meses = 0

while 0 < Qi <= Max: 
	Qi = Qi + Qi*(Pc/100) - Qv
	meses = meses + 1
if Qi >= Max:
	print("MAXIMO")
elif Qi < 0:
	print("ZERO")
print(meses)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:01:13) 
-- CODE:
Qi = int(input(""))
Pc = float(input(""))
Qv = int(input(""))

Max = 8000
meses = 0

while 0 < Qv <= Max: 
	Qi = Qi + Qi*(Pc/100) - Qv
	meses = meses + 1
if Qi >= Max:
	print("MAXIMO")
elif Qi < 0:
	print("ZERO")
print(meses)
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:02:09) 
-- CODE:
Qi = int(input(""))
Pc = float(input(""))
Qv = int(input(""))

Max = 8000
meses = 0

while 0 < Qv <= Max: 
	Qi = Qi + Qi*(Pc/100) - Qv
	meses = meses + 1
if Qi >= Max:
	print("MAXIMO")
elif Qi < 0:
	print("ZERO")
print(meses)
-- EXECUTION TIME:
19.6118
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:

-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
